# rspack-sources

./: Cargo.toml  README.md
.github/workflows/: Bench.yaml  CI.yaml  Publish.yaml
benches/: bench.rs  bench_complex_replace_source.rs  bench_source_map.rs  bench_utf16_len.rs  benchmark_repetitive_react_components.rs
src/: cacheable.rs  cached_source.rs  concat_source.rs  decoder.rs  encoder.rs  helpers.rs  lib.rs  original_source.rs  raw_source.rs  replace_source.rs  source.rs  source_map_source.rs  to_json.rs
src/utf16_len/: aarch64.rs  mod.rs  scalar.rs  wasm32.rs  x86_64.rs
tests/: compat_source.rs
