[package]
name = "rspack_sources"
version = "0.4.20"
edition = "2021"
authors = ["h-a-n-a <andywangsy@gmail.com>", "ahabhgk <ahabhgk@gmail.com>"]
resolver = "2"
license = "MIT"
description = "Rusty webpack-sources port."
keywords = ["sources", "sourcemap"]
repository = "https://github.com/rstackjs/rspack-sources"
documentation = "https://docs.rs/rspack-sources"
readme = "README.md"

include = ["/src/**/*.rs", "/*.toml", "/LICENSE", "/README.md"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(codspeed)"]

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "benchmark_repetitive_react_components"
harness = false

[[bench]]
name = "bench_complex_replace_source"
harness = false

[[bench]]
name = "bench_source_map"
harness = false

[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
dyn-clone = "1.0.20"
rustc-hash = "2.1.2"
memchr = "2.8.0"

codspeed-criterion-compat = { version = "4.4.1", default-features = false, optional = true }
static_assertions = "1.1.0"
simd-json = "0.17.0"
simd-utf16-len = "0.1.0"
rkyv = { version = "=0.8.8", default-features = false, features = ["std", "bytecheck"], optional = true }

[features]
rspack_cacheable = ["rkyv"]
codspeed = ["codspeed-criterion-compat"]

[dev-dependencies]
twox-hash = "2.1.2"
regex = "1.12.3"
criterion = { version = "0.8.2", default-features = false }
rayon = "1.11.0"
